--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -407,6 +407,28 @@ egy nagy felbontású hangkártyaként is használhatjuk. \cite{AHSQ}
 	\caption{Allen \& Heath SQ-6 digitális keverőpult}\label{fig:sq6}
 \end{figure}
 %----------------------------------------------------------------------------
+Az I/O bővítőkártyák közül a rendszerben mindkét pultban megtalálható egy darab SQ Dante kártya ami 64x64 csatorna
+kezelésére képes.
+
+
+
+
+
+%----------------------------------------------------------------------------
+\begin{figure}[H]
+    \centering
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth, keepaspectratio]{figures/sq_dante.jpg}
+        \caption{Allen \& Heath SQ Dante kártya}\label{fig:sq_dante}
+    \end{minipage}\hfill
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth, keepaspectratio]{figures/dt168.jpg}
+        \caption{Allen \& Heath DT168 Dante stagebox}\label{fig:dt168}
+    \end{minipage}
+\end{figure}
+%----------------------------------------------------------------------------
 \subsection{Shure ULXD digitális vezeték nélküli mikrofonrendszer}
 %----------------------------------------------------------------------------
 Manapság egy rendezvényen elengedhetetlen a vezeték nélküli mikrofonok használata.
